2023-12-24  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* wcfname{,0}.test:
	Avoid errors on parallel test processing.

2023-12-23  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* am/euptex.am:
	Do not build binaries of e-pTeX and
	we use alias of e-upTeX for e-pTeX by default.
	https://github.com/texjporg/tex-jp-build/issues/32

2023-11-25  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* wcfname{,0}.test: Add tests for --recorder and *.fls.
	https://github.com/texjporg/tex-jp-build/issues/45

2023-11-24  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* wcfname.test: Add test for file names with over-BMP
	(4byte UTF-8).
	https://tug.org/pipermail/tex-live/2023-November/049685.html
	* eptriptest.test, euptriptest.test:
	Check diffs of trip.{fot,typ} with ignoring trivial changes
	in trip tests.

2023-09-03  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* {eptriptest,euptriptest,eupver}.test:
	Update tests for Windows.

2023-08-20  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* am/euptex.am, {eptriptest,euptriptest,eupver,
	pdfprimitive,wcfname,wcfname0}.test:
	Make easier to test on Windows.

2023-03-29  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* wcfname.test:
	Skip tests for Shift_JIS & EUC-JP if conversion failed.
	Report from Ken Moffat.
	https://tug.org/pipermail/tex-k/2023-March/003911.html

2023-03-09  Karl Berry  <karl@tug.org>

	* TL'23 release.

2023-02-14  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* wcfname.test:
	Avoid errors on parallel test processing.
	Report from Ken Brown.

2023-01-28  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* am/euptex.am:
	Revert options --enable-uptex(-synctex) for configure.
	By default, we do not build binary of upTeX (uptex)
	and we use alias of e-upTeX (euptex) for it.
	https://github.com/texjporg/tex-jp-build/issues/32

2023-01-15  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* wcfname.test, am/euptex.am:
	Add tests for file names with JIS X 0208 & UTF-8 characters
	in `euptex --kanji-internal={euc,sjis,uptex}`.