@@ -1,3 +1,10 @@
+2024-02-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* ptex_version.h, ptex-base.ch, zfmtcompress.test,
+	am/uptex.am: Copy ptex source files from ../ptexdir
+	to cleaning up building environment.
+	https://github.com/texjporg/tex-jp-build/issues/32
+
 2023-12-24  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* wcfname{,0}.test:
